<resources>
    <string name="app_name">噬心工具箱</string>
    <string name="title_home1">首页</string>
    <string name="title_home2">功能</string>
    <string name="title_home3">发现</string>
    <string name="title_home4">我的</string>
    <string name="add_collect">添加收藏</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_retry"> 重 试 </string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="日常工具">日常工具</string>
    <string name="系统工具">系统工具</string>
    <string name="图片工具">图片工具</string>
    <string name="查询工具">查询工具</string>
    <string name="提取工具">提取工具</string>
    <string name="计算工具">计算工具</string>
    <string name="文字工具">文字工具</string>
    <string name="其它工具">其它工具</string>
    <string name="官方交流群">官方交流群</string>
    <string name="意见反馈">意见反馈</string>
    <string name="软件设置">软件设置</string>
    <string name="捐赠榜单">捐赠榜单</string>
    <string name="请用双指测量">请用双指测量</string>
    <string name="水平仪">水平仪</string>
    <string name="垂直">垂直</string>
    <string name="水平">水平</string>
    <string name="刻度尺">刻度尺</string>
    <string name="指南针">指南针</string>
    <string name="量角器">量角器</string>
    <string name="申请权限">申请权限</string>
    <string name="申请">申请</string>
    <string name="拒绝">拒绝</string>
    <string name="相机权限"><![CDATA[此功能需要申请<font color = \'#5187F4\'>\"照相机\"</font>权限后才能够正常使用]]></string>
    <string name="储存权限"><![CDATA[为了保证\"噬心工具箱\"能够正常的在你手机上运行跟使用，请您允许APP获取<font color = \'#5187F4\'>\"读写手机储存\"</font>的权限]]></string>
    <string name="每日60秒早报">每日60秒早报</string>
    <string name="每天60秒读懂世界">每天60秒读懂世界</string>
    <string name="时间屏幕">时间屏幕</string>
    <string name="LED手机字幕">LED手机字幕</string>
    <string name="确定">确定</string>
    <string name="取消">取消</string>
    <string name="背景颜色">背景颜色</string>
    <string name="文字颜色">文字颜色</string>
    <string name="请输入文本内容">请输入文本内容</string>
    <string name="普通模式">普通模式</string>
    <string name="滚动模式">滚动模式</string>
    <string name="字幕颜色">字幕颜色</string>
    <string name="字幕大小">字幕大小</string>
    <string name="滚动速度">滚动速度</string>
    <string name="请输入网址">请输入网址</string>
    <string name="获取">获取</string>
    <string name="网页获源">网页获源</string>
    <string name="短网址生成">短网址生成</string>
    <string name="复制成功">复制成功</string>
    <string name="已成功将内容复制到剪切板">已成功将内容复制到剪切板</string>
    <string name="生成">生成</string>
    <string name="简易画板">简易画板</string>
    <string name="画笔颜色">画笔颜色</string>
    <string name="画笔大小">画笔大小</string>
    <string name="保存为图片">保存为图片</string>
    <string name="保存成功">保存成功</string>
    <string name="已保存到">已保存到：</string>
    <string name="颜色">颜色</string>
    <string name="历史上的今天">历史上的今天</string>
    <string name="切换日期">切换日期</string>
    <string name="复制">复制</string>
    <string name="事件概况">事件概况</string>
    <string name="Google翻译">Google翻译</string>
    <string name="简体中文">简体中文</string>
    <string name="自动检测">自动检测</string>
    <string name="翻译">翻译</string>
    <string name="英语">英语</string>
    <string name="日语">日语</string>
    <string name="繁体中文">繁体中文</string>
    <string name="俄语">俄语</string>
    <string name="法语">法语</string>
    <string name="韩语">韩语</string>
    <string name="高级重启">高级重启</string>
    <string name="设备重启">设备重启</string>
    <string name="快速重启">快速重启</string>
    <string name="重启用户界面">重启用户界面</string>
    <string name="设备关机">设备关机</string>
    <string name="重启至REC模式">重启至REC模式</string>
    <string name="重启至FAST模式">重启至FAST模式</string>
    <string name="重启至安全模式">重启至安全模式</string>
    <string name="无Root权限">无Root权限</string>
    <string name="没有Root权限">当前设备没有Root权限，Root权限为系统最高权限，必须获取完整的Root权限才能保证程序的部分功能正常运行</string>
    <string name="DPI修改">DPI修改</string>
    <string name="自定义">自定义</string>
    <string name="恢复">恢复</string>
    <string name="DPI提示">请合理输入数值，建议300到600之间</string>
    <string name="请输入DPI值">请输入DPI值</string>
    <string name="电量伪装">电量伪装</string>
    <string name="电量伪装内容">嘿，我手机没电啦，下次再聊！！！</string>
    <string name="电量伪装提示">请输入＞0的数值</string>
    <string name="请输入电量值">请输入电量值</string>
    <string name="隐藏状态栏导航栏">隐藏状态栏/导航栏</string>
    <string name="状态栏导航栏">状态栏/导航栏</string>
    <string name="隐藏状态栏">隐藏状态栏</string>
    <string name="隐藏导航栏">隐藏导航栏</string>
    <string name="全部隐藏">全部隐藏</string>
    <string name="全部恢复">全部恢复</string>
    <string name="提取手机壁纸">提取手机壁纸</string>
    <string name="提取桌面壁纸">提取桌面壁纸</string>
    <string name="提取锁屏壁纸">提取锁屏壁纸</string>
    <string name="保存失败">保存失败</string>
    <string name="设备信息">设备信息</string>
    <string name="查看设备信息">查看设备信息</string>
    <string name="WIFI密码查看">WIFI密码查看</string>
    <string name="名称">名称：</string>
    <string name="密码">密码：</string>
    <string name="复制密码">复制密码</string>
    <string name="复制名称">复制名称</string>
    <string name="WIFI名称">WIFI名称</string>
    <string name="WIFI密码">WIFI密码</string>
    <string name="应用管理Apk提取">应用管理(Apk提取)</string>
    <string name="应用管理">应用管理</string>
    <string name="打开软件">打开软件</string>
    <string name="卸载软件">卸载软件</string>
    <string name="复制包名">复制包名</string>
    <string name="提取APK">提取APK</string>
    <string name="分享软件">分享软件</string>
    <string name="软件详情">软件详情</string>
    <string name="提取成功">提取成功</string>
    <string name="搜索">搜索</string>
    <string name="请输入关键字">请输入关键字</string>
    <string name="屏幕坏点检测">屏幕坏点检测</string>
    <string name="系统界面调节工具">系统界面调节工具</string>
    <string name="桌面视频壁纸">桌面视频壁纸</string>
    <string name="视频路径">视频路径</string>
    <string name="温馨提示">温馨提示</string>
    <string name="请先选择视频后再操作">请先选择视频后再操作</string>
    <string name="选择视频">选择视频</string>
    <string name="设置壁纸">设置壁纸</string>
    <string name="开启声音">开启声音</string>
    <string name="关闭声音">关闭声音</string>
    <string name="系统字体大小调节">系统字体大小调节</string>
    <string name="该功能只支持Android7以上的系统">该功能只支持Android7以上的系统</string>
    <string name="修改">修改</string>
    <string name="请授予相关权限后才能够使用">请授予相关权限后才能够使用</string>
    <string name="振动器">振动器</string>
    <string name="停止振动">停止振动</string>
    <string name="开始振动">开始振动</string>
    <string name="选择图片">选择图片</string>
    <string name="缩放图片">缩放图片</string>
    <string name="复制颜色">复制颜色</string>
    <string name="请选择图片">请选择图片</string>
    <string name="脱离图片范围">脱离图片范围</string>
    <string name="取色">取色</string>
    <string name="无">无</string>
    <string name="图片取色">图片取色</string>
    <string name="已将颜色值复制到剪切板">已将颜色值复制到剪切板</string>
    <string name="二维码生成">二维码生成</string>
    <string name="前景颜色">前景颜色</string>
    <string name="选择">选择</string>
    <string name="请选择二维码的LOGO图片">请选择二维码的LOGO图片</string>
    <string name="LOGO图片">LOGO图片</string>
    <string name="二维码尺寸">二维码尺寸</string>
    <string name="有LOGO">有LOGO</string>
    <string name="无LOGO">无LOGO</string>
    <string name="请输入二维码内容">请输入二维码内容</string>
    <string name="保存">保存</string>
    <string name="图片水印">图片水印</string>
    <string name="请先选择图片">请先选择图片</string>
    <string name="请输入水印内容">请输入水印内容</string>
    <string name="小间距">小间距</string>
    <string name="中间距">中间距</string>
    <string name="大间距">大间距</string>
    <string name="水印颜色">水印颜色</string>
    <string name="水印大小">水印大小</string>
    <string name="水印角度">水印角度</string>
    <string name="透明度">透明度</string>
    <string name="重选图片">重选图片</string>
    <string name="保存图片">保存图片</string>
    <string name="九宫格切图">九宫格切图</string>
    <string name="切片已保存"><![CDATA[<font color=\"#868686\">切片已保存在</font><font color=\"#5187f4\">]]></string>
    <string name="导出图片">导出图片</string>
    <string name="效果预览">效果预览</string>
    <string name="下图是发送到朋友圈后的效果">下图是发送到朋友圈后的效果</string>
    <string name="刚刚">刚刚</string>
    <string name="删除">删除</string>
    <string name="九宫格步骤">1. 选择图片，选择后可浏览效果图\n2. 导出切片，导出切片文件到本地</string>
    <string name="纯色图制作">纯色图制作</string>
    <string name="图片颜色">图片颜色</string>
    <string name="图片宽度">图片宽度</string>
    <string name="图片高度">图片高度</string>
    <string name="隐藏图制作">隐藏图制作</string>
    <string name="上层图片">上层图片</string>
    <string name="下层图片">下层图片</string>
    <string name="生成图片">生成图片</string>
    <string name="图片文字化">图片文字化</string>
    <string name="文字大小">文字大小</string>
    <string name="生成文字图">生成文字图</string>
    <string name="请输入文字内容">请输入文字内容</string>
    <string name="图片像素化">图片像素化</string>
    <string name="像素块大小">像素块大小</string>
    <string name="生成像素图">生成像素图</string>
    <string name="转换成功">转换成功</string>
    <string name="转换失败">转换失败</string>
    <string name="图片压缩">图片压缩</string>
    <string name="压缩质量">压缩质量</string>
    <string name="压缩图片">压缩图片</string>
    <string name="压缩成功">压缩成功</string>
    <string name="图片转黑白">图片转黑白</string>
    <string name="毛玻璃图片生成">毛玻璃图片生成</string>
    <string name="模糊程度">模糊程度</string>
    <string name="LowPoly图片生成">LowPoly图片生成</string>
    <string name="精度值">精度值</string>
    <string name="请先选择或者生成图片">请先选择/生成图片</string>
    <string name="请重新选择图片">已制作完成，请重新选择图片</string>
    <string name="图片转素描图">图片转素描图</string>
    <string name="壁纸大全">壁纸大全</string>
    <string name="王者荣耀图集">王者荣耀图集</string>
    <string name="头像大全">头像大全</string>
    <string name="王者荣耀最低战力地区查询">王者荣耀最低战力地区查询</string>
    <string name="选择分区">选择分区</string>
    <string name="字典查询">字典查询</string>
    <string name="查询">查询</string>
    <string name="部首">部首：</string>
    <string name="结构">结构：</string>
    <string name="总笔画">总笔画：</string>
    <string name="偏旁笔画">偏旁笔画：</string>
    <string name="解释">解释：</string>
    <string name="成语词典">成语词典</string>
    <string name="请输入成语">请输入成语</string>
    <string name="拼音">拼音</string>
    <string name="成语解释">成语解释</string>
    <string name="成语出处">成语出处</string>
    <string name="举例">举例</string>
    <string name="语法">语法</string>
    <string name="词语解释">词语解释</string>
    <string name="引证解释">引证解释</string>
    <string name="请输入歌曲或者歌手名称">请输入歌曲/歌手名称</string>
    <string name="音乐搜索器">音乐搜索器</string>
    <string name="下载">下载</string>
    <string name="文件名称">文件名称</string>
    <string name="保存歌曲">保存歌曲</string>
    <string name="音乐保存路径">音乐保存路径：/手机储存/噬心工具箱/音乐搜索器/</string>
    <string name="请输入文件名称">请输入文件名称</string>
    <string name="下载中">下载中</string>
    <string name="请稍等">请稍等</string>
    <string name="缩写查询">缩写查询</string>
    <string name="请输入缩写内容">请输入缩写内容</string>
    <string name="表情包搜索">表情包搜索</string>
    <string name="分享">分享</string>
    <string name="垃圾分类查询">垃圾分类查询</string>
    <string name="请输入垃圾名称">请输入垃圾名称</string>
    <string name="阿里图标库搜索">阿里图标库搜索</string>
    <string name="导出">导出</string>
    <string name="导出为图片">导出为图片</string>
    <string name="图标名称">图标名称</string>
    <string name="图片宽">图片宽</string>
    <string name="图片高">图片高</string>
    <string name="导出路径">导出路径</string>
    <string name="图片取直链">图片取直链</string>
    <string name="图片路径">图片路径</string>
    <string name="获取直链">获取直链</string>
    <string name="视频提取音频">视频提取音频</string>
    <string name="请先选择视频">请先选择视频</string>
    <string name="B站封面提取">B站封面提取</string>
    <string name="请输入BV号">请输入BV号</string>
    <string name="提取">提取</string>
    <string name="提取音频">提取音频</string>
    <string name="请输入图集链接">请输入图集链接</string>
    <string name="快手图集下载">快手图集下载</string>
    <string name="网页图片提取">网页图片提取</string>
    <string name="蓝奏云直链提取">蓝奏云直链提取</string>
    <string name="请输入蓝奏云链接">请输入蓝奏云链接</string>
    <string name="短视频解析">短视频解析/去水印</string>
    <string name="请输入短视频链接">请输入短视频链接</string>
    <string name="保存无水印视频">保存无水印视频</string>
    <string name="保存封面图片">保存封面图片</string>
    <string name="复制视频链接">复制视频链接</string>
    <string name="复制封面链接">复制封面链接</string>
    <string name="保存视频">保存视频</string>
    <string name="视频保存路径">视频保存路径：/手机储存/噬心工具箱/短视频去水印/视频/</string>
    <string name="抖音快手去水印">抖音/快手去水印</string>
    <string name="解析失败">解析失败</string>
    <string name="请输入抖音快手作品链接">请输入抖音/快手作品链接</string>
    <string name="亲戚称呼计算">亲戚称呼计算</string>
    <string name="拆字">拆字</string>
    <string name="摩斯电码">摩斯电码</string>
    <string name="更新日志">更新日志</string>
    <string name="捐赠金额">捐赠金额</string>
    <string name="联系方式">联系方式</string>
    <string name="昵称">昵称</string>
</resources>