<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/backgroundColor"
    android:clipToPadding="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/app_name"
            android:textColor="@color/editTextColor"
            android:textSize="28sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/itemBackColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/home1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_house_24"
                app:tint="@color/zts" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home1"
                android:textColor="@color/zts"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_widgets_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:id="@+id/txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home2"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_explore_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_home3"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/itemBackColor" />

        <LinearLayout
            android:id="@+id/qun"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_people_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/官方交流群"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gxrz"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_assignment_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/更新日志"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/juan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_assessment_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/捐赠榜单"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/yijian"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_email_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/意见反馈"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:srcCompat="@drawable/ic_twotone_settings_24"
                app:tint="@color/editTextColor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/软件设置"
                android:textColor="@color/editTextColor"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>