<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/图标名称"
            android:singleLine="true"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hui" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/图片宽"
                android:singleLine="true"
                android:text="256"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/hui" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/图片高"
                android:singleLine="true"
                android:text="256"
                android:textColor="@color/editTextColor"
                android:textColorHint="@color/hui" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/导出路径"
            android:singleLine="true"
            android:text="/噬心工具箱/阿里图标库搜索/"
            android:textColor="@color/editTextColor"
            android:textColorHint="@color/hui" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>