<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbarColor"
        android:stateListAnimator="@null"
        android:theme="@style/Theme.Tools.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@+id/toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="20dp"
                android:textSize="14sp"
                android:textColor="@color/hui"
                android:text="如果您曾经给该软件捐赠过，但是榜单中没有你的名字的话，请联系开发者哦\n如果您想给该软件捐赠，请在备注中留下您的联系方式等，感谢您对该软件的支持"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/backgroundColor"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.Tools.PopupOverlay"
                app:title="@string/捐赠榜单" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#205187F4"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/昵称"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/zts"
                android:textSize="14sp"
                android:textStyle="normal"
                app:rippleColor="@color/rippleColor"
                app:strokeColor="@color/zts"
                app:strokeWidth="1dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#205187F4"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/联系方式"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/zts"
                android:textSize="14sp"
                android:textStyle="normal"
                app:rippleColor="@color/rippleColor"
                app:strokeColor="@color/zts"
                app:strokeWidth="1dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:backgroundTint="#205187F4"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:minWidth="0dp"
                android:minHeight="40dp"
                android:text="@string/捐赠金额"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/zts"
                android:textSize="14sp"
                android:textStyle="normal"
                app:rippleColor="@color/rippleColor"
                app:strokeColor="@color/zts"
                app:strokeWidth="1dp">

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/itemBackColor" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:srlEnablePureScrollMode="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>